--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/phonedotcom/prettier-config-pdc#readme",
   "dependencies": {
+    "@prettier/plugin-xml": "^3.2.2",
     "prettier-plugin-embed": "^0.2.5",
-    "prettier-plugin-sql": "^0.15.3",
-    "prettier-plugin-xml": "^0.1.0"
+    "prettier-plugin-sql": "^0.15.3"
   },
   "devDependencies": {
     "npm-check-updates": "^16.14.6",
-    "prettier": "^3.1.0"
+    "prettier": "^3.2.4"
   }
 }
